# lxqt-labwc-session

./: CMakeLists.txt  PKGBUILD  README.md  lxqt-labwc.desktop  lxqt-panelloader.in  lxqt-settingsexporter.in  lxqt2labwcexporter.in  startlxqtlabwc.1  startlxqtlabwc.in  toggledropdown.in
autostart/: CMakeLists.txt  lxqt-panelloader.desktop
config/: CMakeLists.txt  panel-wayland.conf.in
config/labwc/: autostart  environment  menu.xml  rc.xml
config/waybar/: lxqt-style-dark.css  lxqt-style-light.css  lxqt-style.css  taskbar.config
themes/: CMakeLists.txt
themes/Vent-dark/openbox-3/: close.xbm  desk.xbm  desk_toggled.xbm  iconify_hover1.xbm  max_toggled.xbm  menu.xbm  menu_hover1.xbm  shade_toggled.xbm  themerc
themes/Vent/openbox-3/: max_toggled_hover.xbm  shade.xbm  themerc
wallpaper/: CMakeLists.txt
wayland-sessions/: CMakeLists.txt
